--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 /Packages/
 /ProjectSettings/
 /UserSettings/
+/Assets/AssetStoreTools
+/Assets/AssetStoreTools.meta
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
